--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -11,7 +11,7 @@
             <div class="col-lg-1 style-col">
                 <label class="control-label">Grouped By:</label>
                 <vr-dropdown datatextfield="name" datavaluefield="value"
-                                entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="updateReport"></vr-dropdown>
+                                entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="selectedTimeDimensionChanged"></vr-dropdown>
             </div>
             <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
                 <label class="control-label">From:</label>
@@ -31,7 +31,7 @@
 
         <div class="row style-row">
             <div class="col-lg-12 col-md-12   style-col">
-                <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" style="height:600px"></div>
+                <div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" ui-grid-expandable ui-grid-auto-resize ng-style="gridStyle"></div>
             </div>
                
         </div>
