--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
@@ -1,4 +1,4 @@
-﻿<div ng-class="{ 'sortable': sortable }" class="header-custom" ng-click="grid.appScope.toggleHeader($event)">
+﻿<div ng-class="{ 'sortable': sortable }" class="header-custom" ng-click="grid.appScope.toggleHeader($event)" style="background-color: #829EBF;color:#FFF">
 
 
     <div class="ui-grid-cell-contents" col-index="renderIndex">
