--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/ProgressCellTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/ProgressCellTemplate.html
@@ -4,5 +4,5 @@
 
         </div>
        
-    </div><span class="span-summary"> {{row.entity[col.field]}} %$ </span>
+    </div><span class="span-summary"> {{row.entity[col.field]}} % </span>
 </div>
