--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/RowTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/RowTemplate.html
@@ -1,4 +1,6 @@
-﻿<div ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.colDef.name" 
-     class="ui-grid-cell" ng-class="{ 'ui-grid-row-header-cell': col.isRowHeader }" ui-grid-cell>
+﻿<div>
+    <div ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.colDef.name"
+         class="ui-grid-cell" ng-class="{ 'ui-grid-row-header-cell': col.isRowHeader }" ui-grid-cell>
+    </div>
+    <div>dsgf</div>
 </div>
-<div>dfdf</div>
