Add Validation to dropdown directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22136

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -1,5 +1,5 @@
 ﻿<div class="dropdown">
-    <button class="btn btn-default dropdown-toggle validate-element" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
+    <button class="btn btn-default dropdown-toggle" ng-class="isvalidcomp()" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
         <span style="float:left;margin:0px"> {{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:15px;right:5px" class="caret"></span>
     </button>
