--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -16,7 +16,17 @@
 </head>
 <body ng-controller="mainCtrl">
 
-
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                
+                <a class="navbar-brand" href="#">TOne V2</a>
+            </div>
+            <div id="navbar" >
+                
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
     <div id="wrapper" ng-style="toogled==true?{'padding-left':'250px'}:{'padding-left':'0px'}">
         <!-- Sidebar -->
         <div id="sidebar-wrapper" ng-style="toogled==true?{'width':'250px'}:{'width':'30px'}">
