--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -5,8 +5,7 @@
 <div class="container-fluid ">
     <div class="panel panel-primary panel-over-color">
         <div class="panel-body">
-            <div class="row style-row">
-
+            <div class="row style-row am-collapse" ng-show="custom">
                 <div class="col-lg-2 style-col">
                     <label class="control-label">Grouped By:</label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
@@ -25,9 +24,24 @@
                         <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateChart()">
                     </div>
                 </div>
-               
-            </div>
 
+            </div>
+            <div class="row ">
+                <div class="col-lg-12 col-no-padding ">
+                    <div class="action-bar">
+                        <div class="btn-group action-bar-left">
+                            <button ng-init="custom=true" ng-click="custom = !custom" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" type="button" class="btn btn-default btncustom" aria-label="Left Align">
+                                <span ng-show="custom" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+                                <span ng-hide="custom" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                            </button>
+
+                        </div>
+                        <div class="btn-group action-bar-right" ng-show="custom">
+                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="onclickClear()">Reset<span style="padding-left:4px" class="glyphicon  glyphicon-refresh" aria-hidden="true"></span></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row style-row">
                 <div class="col-lg-12 style-col">
                     <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
