--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
@@ -4,25 +4,7 @@
 <div class="container-fluid ">
     <div class="panel panel-primary panel-over-color">
         <div class="panel-body">
-            <div class="row style-row">
-                <nav class="navbar navbar-default navbar-fixed-top">
-                    <div class="container-fluid">
-                        <div class="row pad-top-m">
-                            <div class="col-lg-12 col-no-padding">
-                                <div class="action-bar">
-                                    <div class="btn-group action-bar-left">
-
-                                    </div>
-                                    <div class="btn-group action-bar-right">
-                                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-                                        <button ng-disabled="validateForm()" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
+            
             <div class="row style-row">
                 <div class="col-lg-2  style-col">
                     <label class="control-label" style="padding-top:6px">Rule Type:</label>
@@ -51,7 +33,7 @@
                 </div>
                 <div class="col-lg-2  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
                     <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                        <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
+                        <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate"  data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
                         <div class="tooltip-error" ng-show="initErrortooltipBED()">{{msgd}}</div>
                     </div>
                 </div>
@@ -59,7 +41,7 @@
                     <label class="control-label" style="padding-top:6px">End Effective Date:</label>
                 </div>
                 <div class="col-lg-2  style-col">
-                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
+                    <div style="display:inline-block;position:relative;" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
                         <input size="10" ng-class="isvalidcompDateEED()" class="form-control" data-min-date="{{BEDDate}}" ng-model="EEDDate" data-autoclose="1" placeholder="Date" data-date-format="dd/MM/yyyy" bs-datepicker type="text">
                         <div class="tooltip-error" ng-show="initErrortooltipEED()">{{msged}}</div>
                     </div>
@@ -83,7 +65,15 @@
             </div>
             <div class="row pad-top-m">
                 <div class="col-lg-12 col-no-padding">
+                    <div class="action-bar">
+                        <div class="btn-group action-bar-left">
 
+                        </div>
+                        <div class="btn-group action-bar-right" >
+                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                            <button ng-disabled="validateForm()" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span ng-init=" issaving = false" ng-show="issaving==false" style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span><img src="~/../images/loader-mask.gif" style="width:17px" ng-show="issaving" /></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
