--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -16,11 +16,11 @@
 </head>
 <body ng-controller="mainCtrl">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
             <div class="navbar-header">
                 
-                <a class="navbar-brand" href="#">TOne V2</a>
+               
             </div>
             <div id="navbar" >
                 
