just fix height btn , inpute
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22171

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -8,6 +8,15 @@
     border-color:transparent !important;
     background-color:#666 !important;
 }
+/*bootstrap overide */
+.form-control {   
+    height: 29px !important;
+}
+.btn{
+    height: 29px !important;
+    padding: 4px 12px !important;
+} 
+/* end bootstrap overide */  
 .disable-animations.ng-animate{
     -webkit-transition: none !important;
     transition: none !important;
