--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -1,70 +1,94 @@
 ﻿
 <div class="panel panel-primary panel-over-color">
     <div class="panel-body">
-        <div class="row style-row">
-
-            <div class="col-lg-2 style-col">
-                <label class="control-label">Measure:</label>
-                <vr-dropdown datatextfield="description" datavaluefield="value"
-                             entityname="" type="standard" options="optionsMeasureTypes" ></vr-dropdown>
-            </div>
-
-            <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                <label class="control-label">From:</label>
-                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                    <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" >
+        <div class="am-collapse" ng-show="inputSectionVisible">
+            <div class="row style-row">
+                <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                    <label class="control-label">From:</label>
+                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                        <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
+                    </div>
                 </div>
-            </div>
-
-            <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                <label class="control-label">To:</label>
-                <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                    <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" >
+                <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                    <label class="control-label">To:</label>
+                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                        <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-lg-1 style-col">
-                <label class="control-label">Top:</label>
-                <vr-dropdown datatextfield="description" datavaluefield="value"
-                             entityname="" type="standard" options="optionsTopCount" ></vr-dropdown>
-            </div>
-
-            <div class="col-lg-2 style-col">
-                <div class="control-label">&nbsp;</div>
-                <label class="control-label" style="padding-top:6px">
-                    <input type="checkbox" ng-model="showValuesOnLegends" ng-change="filterChanged()" />
-                    Show Values with Legends
-                </label>
-            </div>
-            <div class="col-lg-1 style-col">
-                <input type="button" value="Issue" ng-click="getData()" />
-            </div>
-        </div>
-
-        <div class="row style-row">
-            <div class="col-lg-5 style-col">
-                <vr-chart data-on-ready="chartZonesReady" style="display:inline-block"></vr-chart>
-            </div>
-            <div class="col-lg-5 style-col">
-                <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
-            </div>
-            <div ng-show="isZoneVisible">
-                <div ng-repeat="itm in optionsMeasureTypes.datasource">
+                <div class="col-lg-2 style-col">
+                    <div class="control-label">&nbsp;</div>
                     <label class="control-label" style="padding-top:6px">
-                        <input type="checkbox" ng-model="itm.selected" ng-change="updateZone()" />
-                        {{itm.name}}
-
+                        <input type="checkbox" ng-model="showValuesOnLegends" ng-change="filterChanged()" />
+                        Show Values with Legends
                     </label>
                 </div>
             </div>
         </div>
-        <div class="row style-row">
-            <div class="col-lg-12 col-md-12   style-col">
-                <!--<div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" ui-grid-expandable ui-grid-auto-resize ng-style="getGridHeight(gridOptionsZoneDetails)"></div>-->
+        <div class="row ">
+            <div class="col-lg-12 col-no-padding ">
+                <div class="action-bar">
+                    <div class="btn-group action-bar-left">
+                        <button ng-init="inputSectionVisible=true" ng-click="inputSectionVisible = !inputSectionVisible" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" type="button" class="btn btn-default btncustom" aria-label="Left Align">
+                            <span ng-show="inputSectionVisible" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+                            <span ng-hide="inputSectionVisible" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                        </button>
+
+                    </div>
+                    <div class="btn-group action-bar-right" ng-show="inputSectionVisible">
+                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="onclickClear()">Reset<span style="padding-left:4px" class="glyphicon  glyphicon-refresh" aria-hidden="true"></span></button>
+                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="getData()">Issue<span style="padding-left:4px" class="glyphicon  glyphicon-search" aria-hidden="true"></span></button>
+                    </div>
+                </div>
             </div>
         </div>
+        <div ng-show="showResult">
+            <div class="row style-row">
+                <div class="col-lg-5 style-col">
+                    <vr-chart data-on-ready="chartSelectedMeasureReady" style="display:inline-block"></vr-chart>
+                </div>
+                <div class="col-lg-5 style-col">
+                    <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
+                </div>
+                <div ng-show="isZoneVisible">
+                    <div ng-repeat="itm in optionsMeasureTypes.datasource">
+                        <label class="control-label" style="padding-top:6px">
+                            <input type="checkbox" ng-model="itm.selected" ng-change="updateZone()" />
+                            {{itm.name}}
+
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="row style-row">
+                <div class="col-lg-1 style-col">
+                    <vr-dropdown datatextfield="description" datavaluefield="value"
+                                 entityname="" type="standard" options="optionsTopCount" data-onselectionchange="pageChanged"></vr-dropdown>
+                </div>
+                <div class="col-lg-5 style-col">
+                    <pagination total-items="totalDataCount" ng-model="currentPage" max-size="5" class="pagination-sm"
+                                items-per-page="optionsTopCount.lastselectedvalue.value" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
+                </div>
+                <div class="col-lg-1 style-col">
+                    <label class="control-label" style="padding-top:6px">
+                        {{totalDataCount}} Items
+                    </label>
+                </div>
+            </div>
+            <div class="row style-row">
+                <div class="col-lg-12 col-md-12   style-col">
+                    <div id="custom" class="gridroute" ui-grid="gridOptionsAllMeasures" ui-grid-auto-resize ng-style="getGridHeight(gridOptionsAllMeasures)"></div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
+<style>
+    .pagination{
+        margin:0px !important;
+    }
+</style>
 
 
 
