--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-chart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-chart.html
@@ -1,3 +1,4 @@
-﻿<div ng-show="isLoading" style="z-index:100;position:absolute;color:gray;font-size:16px;height:200px;width:500px">
-    <img src="~/../images/loader-mask.gif" style="padding: 50px 500px" /></div>
-<div id="divChart"  />
+﻿<div ng-show="isLoading" style="z-index: 100; position: absolute; color: gray; font-size: 16px; height: 350px;">
+    <img src="~/../images/loader-mask.gif"  />
+</div>
+<div id="divChart" style="height:350px" />
